client/templates/layouts/masterLayout/masterLayout.import.less
.layout {
	height: 100%;
	display: flex;
	flex-direction: column;
	.main-content {
		display: flex;
		flex-grow: 1;
		background-position: center;
		background-size: cover;
		position: relative;
		div[data-momentum] {
			flex-grow: 1;
			> div:not(:last-child) {
				position: absolute;
				width: 100%;
				height: 100%;
			}
		}
	}
}

